@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.280 2023/04/01 10:13:44 bsiegert Exp $
+# $NetBSD: Makefile,v 1.281 2023/05/24 07:17:59 wiz Exp $
 #
 
 COMMENT=	Communication programs
@@ -52,7 +52,6 @@ SUBDIR+=	ircu
 SUBDIR+=	iroffer
 SUBDIR+=	irssi
 SUBDIR+=	irssi-icb
-SUBDIR+=	irssi-xmpp
 SUBDIR+=	jabberd2
 SUBDIR+=	jicofo
 SUBDIR+=	jitsi-meet-prosody
