@@ -1,15 +1,0 @@
-irssi-xmpp is an irssi plugin to connect to the Jabber network.
-Its aim is to provide a good integration in this text-based irc client
-and a good support of XMPP (the Jabber protocol).
-
-Its main features are:
- * Sending and receiving messages in irssi's query windows
- * A roster with contact & resource tracking (contact list)
- * Contact management (add, remove, manage subscriptions)
- * Tab completion of commands, JIDs and resources
- * Many extensions supported (XEP) including Multi-User Chat (MUC)
- * Support for multiple accounts
- * Unicode support (UTF-8)
- * SSL and STARTTLS support
-
-To deal with the XMPP protocol, it uses of the Loudmouth library.
