@@ -1,8 +1,0 @@
-$NetBSD: distinfo,v 1.26 2023/05/15 22:01:15 wiz Exp $
-
-BLAKE2s (irssi-xmpp-0.54/irssi-1.4.4.tar.gz) = 0129d3331a1d33328905c890a80b76309db2c73a2f8a03f4b81c554cd823916d
-SHA512 (irssi-xmpp-0.54/irssi-1.4.4.tar.gz) = d4e9f6a2cf583ef52e84a7db20ee08fe020dd9f4b5dc79262e80f666f4ca86f08401499e2368c0381d4de78ff67ba94832ef53ad227170c3455410ae0da5de8d
-Size (irssi-xmpp-0.54/irssi-1.4.4.tar.gz) = 1928023 bytes
-BLAKE2s (irssi-xmpp-0.54/irssi-xmpp-0.54.tar.gz) = e31f5519b4753f69f3cb6ac61f52762f2eff13127402f2fb16a40f9e0699e11e
-SHA512 (irssi-xmpp-0.54/irssi-xmpp-0.54.tar.gz) = 31ddd9e0147eec23d08b8bcbe242e831d612cb2d00f3b56776e9d0b87db9bd76d4bb147422cdf18c0567f0e0463ab828ab7a0ef80a2b35cfdc0a8be962b39f14
-Size (irssi-xmpp-0.54/irssi-xmpp-0.54.tar.gz) = 65618 bytes
